<resources>
    <string name="app_name">WifiDots</string>
    <!-- Strings used for fragments for navigation -->

    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_seccion">Iniciar Seccion</string>
    <string name="o">O</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="google">Google</string>
    <string name="registrate"> Registrate</string>

    <string name="agregarDots">Agregar Dots</string>
    <string name="eliminar_dots">Eliminar Dots</string>
    <string name="cuenta">Cuenta</string>
    <string name="anuncio">Anuncio</string>
    <string name="consigue_tu_dots">Consigue tu Dots!</string>
    <string name="restablecer_ajustes">Restablecer Ajustes</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="bar_title">Home</string>
    <string name="Dots">Dots</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="programar_dots">Programar Dots</string>
    <string name="lunes"> Lunes</string>
    <string name="sabado">Sabado</string>
    <string name="viernes">Viernes</string>
    <string name="jueves">Jueves</string>
    <string name="miercoles">Miercoles</string>
    <string name="martes">Martes</string>
    <string name="dots">Dots</string>
    <string name="SelecioneDia">Selecione Dia</string>
    <string name="Selecioneh">Selecione Hora</string>
    <string name="domingo">Domingo</string>
    <string name="hora_de_encendido"> Hora de Encendido </string>
    <string name="hora_de_apagado"> Hora de Apagado </string>
    <string name="programar_btn">Programar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>