<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProgramDots"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgramDot">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_squareblue"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:padding="30dp"
        android:text="Programar Dots"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTextoAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text=""
        android:textColor="#B5B5B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <Spinner
        android:id="@+id/spinnerProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:minHeight="48dp"
        android:padding="35dp"
        android:tooltipText="Selecione Dots a programar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:ignore="SpeakableTextPresentCheck" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_squarewhite_stroke"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TableRow>

            <TextView
                android:id="@+id/tvLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/lunes"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/martes"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/miercoles"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/jueves"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/viernes"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/sabado"
                android:textSize="11sp"></TextView>

            <TextView
                android:id="@+id/tvDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5sp"
                android:text="@string/domingo"
                android:textSize="11sp"></TextView>
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/chLunes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/chMartes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/chMiercoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/chJueves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/chViernes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/chSabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/chDomingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/edTimeE"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/ic_squarewhite_stroke"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:hint="Hora de encendido"
        android:inputType="time"
        android:minHeight="48dp"
        android:onClick="horaE"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/edTimeA"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/ic_squarewhite_stroke"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:hint="Hora de apagado"
        android:inputType="time"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <android.widget.Button
        android:id="@+id/Program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/ic_squarecian"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:paddingVertical="1dp"
        android:text=""
        android:textColor="#3C3C3C"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>